Add dependency on bison.

--- a/build.xml
+++ b/build.xml
@@ -14,7 +14,7 @@
 	libproc-simple-perl, libgit-repository-perl, libtry-tiny-perl,
 	libfile-copy-recursive-perl, libdancer2-perl,
 	config-package-dev, gcc, g++, gnat, devscripts,
-	libidn11-dev, libgcrypt20-dev, libgnutls28-dev,
+	libidn11-dev, libgcrypt20-dev, libgnutls28-dev, bison,
 	libncurses-dev, libxml2-dev, qt5-default, erlang-dev</property>
 <property name="mdpc.descrs" value="MDVL build dependencies"/>
 <property name="mdpc.descrl">
