--- a/build.xml
+++ b/build.xml
@@ -12,7 +12,7 @@
 <property name="mdpc.depends"
 	>mdvl-meta-always, libxml-dom-perl, libgit-wrapper-perl,
 	libproc-simple-perl, libgit-repository-perl, libtry-tiny-perl,
-	libfile-copy-recursive-perl, libdancer2-perl,
+	libfile-copy-recursive-perl, libdancer2-perl, zlib1g-dev,
 	config-package-dev, gcc, g++, gnat, devscripts,
 	libidn11-dev, libgcrypt20-dev, libgnutls28-dev, bison,
 	libncurses-dev, libxml2-dev, qt5-default, erlang-dev</property>
