--- a/build.xml
+++ b/build.xml
@@ -15,7 +15,7 @@
 	libfile-copy-recursive-perl, libdancer2-perl, zlib1g-dev,
 	config-package-dev, gcc, g++, gnat, devscripts,
 	libidn11-dev, libgcrypt20-dev, libgnutls28-dev, bison,
-	libncurses-dev, libxml2-dev, qt5-default, erlang-dev,
+	libncurses-dev, libxml2-dev, qtbase5-dev, erlang-dev,
 	cmake, libpulse-dev</property>
 <property name="mdpc.descrs" value="MDVL build dependencies"/>
 <property name="mdpc.descrl">
