--- a/build.xml
+++ b/build.xml
@@ -13,7 +13,7 @@
 	>mdvl-meta-always, libxml-dom-perl, libgit-wrapper-perl,
 	libproc-simple-perl, libgit-repository-perl, libtry-tiny-perl,
 	libfile-copy-recursive-perl, libdancer2-perl, zlib1g-dev,
-	config-package-dev, gcc, g++, gnat, devscripts,
+	config-package-dev, gcc, g++, gnat, devscripts, opencl-headers,
 	libidn11-dev, libgcrypt20-dev, libgnutls28-dev, bison,
 	libncurses-dev, libxml2-dev, qtbase5-dev, erlang-dev,
 	cmake, libpulse-dev</property>
