--- a/build.xml
+++ b/build.xml
@@ -16,7 +16,7 @@
 	config-package-dev, gcc, g++, gnat, devscripts, opencl-headers,
 	ocl-icd-opencl-dev, ocl-icd-libopencl1, libxi-dev,
 	libidn11-dev, libgcrypt20-dev, libgnutls28-dev, bison,
-	libncurses-dev, libxml2-dev, qtbase5-dev, erlang-dev,
+	libncurses-dev, libxml2-dev, qtbase5-dev, erlang-dev, libsodium-dev,
 	cmake, maven, libpulse-dev, gprbuild, cargo, rustc</property>
 <property name="mdpc.descrs" value="MDVL build dependencies"/>
 <property name="mdpc.descrl">
