--- a/build.xml
+++ b/build.xml
@@ -26,9 +26,7 @@
 </property>
 
 <!-- CI INTEGRATION -->
-<target name="package_triggered" depends="package">
-	<property name="masysma.ci.trigger" value="newver"/>
-</target>
+<target name="autoci" depends="autopackage"/>
 
 <!-- CONST TPL IMPORT -->
 <property environment="env"/>
